--- a/src/components/TeamMembers.astro
+++ b/src/components/TeamMembers.astro
@@ -1,7 +1,10 @@
 ---
 import {Icon} from 'astro-icon/components'
-const {name, image, bio} = Astro.props.data;
+import { Image } from 'astro:assets';
+const {name, image: imageSrc, bio} = Astro.props.data;
 const image_dimension = 246;
+
+const images = import.meta.glob<{ default: ImageMetadata; }>('/src/assets/images/member_images/*.{png,jpg,jpeg,svg,webp}');
 ---
 <div class="mb-8 md:mb-0 w-full h-full  group/teamMemberCard relative font-normal">
     <!--border-dashed border-8 border-gray-900 hover:border-gray-300-->
@@ -15,7 +18,7 @@ const image_dimension = 246;
 
     <!--</div>-->
 
-    <img src={image} class="object-cover aspect-square w-full h-full rounded-t-xl" alt={image}/>
+    <Image src={images[imageSrc]()} class="object-cover aspect-square w-full h-full rounded-t-xl" alt={`${name} photo`}/>
     <div id="overlay" class="w-full flex flex-col absolute bottom-0 transition-all ease-in-out duration-200">
         <span class="w-full text-center bg-gray-900 p-2">{name}</span>
         <p class="w-full p-4 hidden opacity-0 group-hover/teamMemberCard:block bg-gray-900 group-hover/teamMemberCard:opacity-95 fade delay-200 duration-300 ease-in-out text-gray-400">
